# Indie_studio

./: CMakeLists.txt  README.md
assets/: Menu.xml  crueltrick.pk3
assets/font/: Bombeman.xml
assets/maps/: flatmap.map  user-flatmap.pk3
inc/: Bomb.hpp  Bomberman.hpp  Entity.hpp  EventListener.hpp  Exception.hpp  Game.hpp  Item.hpp  LibManager.hpp  Map.hpp  Menu.hpp  Player.hpp  Saver.hpp  Settings.hpp  Utils.hpp
modules/: FindIrrlicht.cmake
src/: EventListener.cpp  Exception.cpp  Settings.cpp  main.cpp
src/Bomberman/: Bomberman.cpp  Bomberman_getset.cpp  Bomberman_run.cpp
src/Game/: Bomb.cpp  Bomb_animation.cpp  Game.cpp  Game_EL.cpp  Game_getset.cpp  Map.cpp  Map_get.cpp  Map_interns1.cpp  Map_interns2.cpp  Map_set.cpp  Player.cpp  Player_get.cpp  Player_set.cpp
src/LibManager/: LibManager.cpp  LibManager_get.cpp
src/Menu/: Menu.cpp  Menu_DoAction.cpp  Menu_EL.cpp  Menu_draw.cpp
src/Saver/: Saver.cpp  Saver_load.cpp  Saver_save.cpp
